# sfda_stat

./: .gitignore  CLAUDE.md  Dockerfile  README.md  STATISTICAL_ENHANCEMENT_TODO.md  complete_mcp_integration_test.py  dev.ps1  dev.sh  mcp_integration_test.py  pyproject.toml  requirements.txt  test_chinese_fonts.py  test_image_generation.py
app/: main.py
app/api/: charts.py  correlation.py  descriptive.py  distribution.py  inferential.py  regression.py
app/models/: __init__.py  chart_models.py  request_models.py  request_models_backup.py  response_models.py
app/services/: chart_service.py  correlation_analysis.py  descriptive_stats.py  distribution_analysis.py  inferential_stats.py  regression_analysis.py
docs/: API文件.md  TODO_TTEST.md  系統分析.md  統計方法說明.md
docs/bk/: uv_usage_guide.md
test_data/: dataset1_normal.csv  dataset2_shifted.csv  dataset3_two_groups.csv  dataset4_paired.csv  hypertension_treatment.csv  product_quality_control.csv  salary_comparison.csv  sleep_pattern_study.csv  teaching_method_comparison.csv
tests/: test_descriptive.py  test_realistic_scenarios.py  test_ttest_api.py
